src/app/home-page/components/banner-image/banner-image.component.scss
@use '/src/styles.scss' as styles;

.contents {
  width: 100%;
  height: 100vh;
  padding: 5rem;
  background-size: cover;
  display: flex;
  justify-content: center;

  @media (min-width: map-get(styles.$breakpoints, medium)) {
    & {
      background-position: 33%;
      align-items: center;
    }
  }

  @media (max-width: map-get(styles.$breakpoints, medium)) {
    & {
      background-position-y: 50%;
      align-items: flex-end;
    }
  }

  & > div {
    max-width: 1080px;

    .buttons {
      flex: none;
      flex-wrap: wrap;

      .drop-shadow {
        background-color: rgba(0, 0, 0, 0.5);
        border-radius: 4px;
      }
    }
  }

  h2 {
    color: map-get(styles.$text-gray, lightest);
    white-space: pre-line;
    text-shadow: black 0 0 10px, black 0 0 20px, black 0 0 30px;
  }
}

